# coverage-based-standardization

./: .gitignore  CITATION.cff  README.md  pyproject.toml
data/: S_true.npy  dsd-amsterdam-melody-decade-counts.csv  dsd-melody-place-counts-census.csv  exp_productivity-new.pkl  exp_stratified-new.pkl  exp_stromer-new.pkl  placenames.json  population-estimates.csv  populations_list.pkl  threshold_populations1-0.5.pkl  threshold_populations1-2.pkl  threshold_populations1-3.pkl  threshold_populations1-4.pkl
notebooks/: coverage_accuracy.ipynb  coverage_threshold.ipynb  example-figure.ipynb  make-data-17th-century.ipynb  make-data-amsterdam.ipynb  simulation.ipynb  song-coverage-diachronic.ipynb  song-coverage.ipynb
src/: coverage_threshold.py  experiment.py  model.py  simulation.py  utils.py
