[project]
name = "coverage-complexity"
version = "0.1.0"
description = "Code accompanying the paper 'Correcting collection bias in comparative studies of diversity'"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "copia>=0.1.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "numpy==1.26.4", # numpy>=2.2.0
    "pymc>=5.20.0",
    "pandas>=2.2.3",
    "pykernel>=0.1.6",
    "scikit-learn>=1.6.0",
    "statsmodels>=0.14.4",
    "joblib>=1.4.2",
    "sqlalchemy>=2.0.37",
    "pymysql>=1.1.1",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "numba>=0.61.2",
    "jax>=0.5.3",
    "numpyro>=0.18.0",
    "funsor>=0.4.5",
    "cython>=3.1.2",
    "powerlaw>=1.5",
    "jinja2>=3.1.6",
    "graphviz>=0.21",
]

[tool.uv.sources]
copia = { git = "https://github.com/mikekestemont/copia" }
